[package]
authors = ['Shin Takahashi']
description = 'Faucet pallect for the basic token'
edition = '2018'
homepage = ''
license = 'Unlicense'
name = 'faucet-pallet'
repository = 'https://github.com/realtakahashi/faucet_pallet/tree/8387d75aeca08c4c3f2b47c9ce81f269eaeda948'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.parity-scale-codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-runtime = { version = '2.0.0', default-features = false }
sp-core = { default-features = false, version = '2.0.0' }
hex-literal = "0.3.1"
pallet-balances = { version = "2.0.0", default_features = false }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
]
