[package]
authors = ['Shin Takahashi']
description = 'Faucet pallect for the basic token'
edition = '2018'
homepage = ''
license = 'Unlicense'
name = 'faucet-pallet'
repository = 'https://github.com/realtakahashi/faucet_pallet/tree/8387d75aeca08c4c3f2b47c9ce81f269eaeda948'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# compatibility_version = "2.0.0"

[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], version = '2.0.1' }
parking_lot = "0.10.0"
alt_serde = { version = "=1.0.104", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.44", default-features = false, git = "https://github.com/Xanewok/json", branch = "no-std", features = ["alloc"] }

# Substrate packages

frame-support = { version = '3.0.0', default-features = false }
frame-system = { version = '3.0.0', default-features = false }
sp-core = { version = '3.0.0', default-features = false }
sp-io = { version = '3.0.0', default-features = false }
sp-runtime = { version = '3.0.0', default-features = false }
sp-std = { version = '3.0.0', default-features = false }
chrono = { version = '0.4.19', default-features = false }
rustc-hex = { version="2.1.0", default-features = false }
bs58 = { version = "0.4.0", default-features = false }

pallet-balances = { version = "3.0.0", default_features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'parity-scale-codec/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
	'rustc-hex/std',
	'bs58/std',
	'serde/std',
	'pallet-balances/std',
]
